/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-07-18 06:04 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/sixapi/include/sxapi.h
  * contrib/sixapi/source/sde.c
    ! sx_Alias to return PBYTE

2012-07-18 05:51 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/sixapi/source/dbcopy.c
  * contrib/sixapi/source/dbsort.c
  * contrib/sixapi/source/replace.c
  * contrib/sixapi/source/global.c
    ! do not access internals

2012-07-18 00:45 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/sixapi/tests/test01.prg
    ! corrected syntax error

2012-07-18 00:37 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/sixapi/include/sixapi.ch
    - delete "REQUEST SXAPI"

2012-07-17 22:50 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  + contrib/sixapi
  + contrib/sixapi/include
  + contrib/sixapi/include/sixapi.ch
  + contrib/sixapi/include/sxapi.h
  + contrib/sixapi/include/sxver.h
  + contrib/sixapi/include/unsix.ch
  + contrib/sixapi/source
  + contrib/sixapi/source/alias.c
  + contrib/sixapi/source/append.c
  + contrib/sixapi/source/array.prg
  + contrib/sixapi/source/base.c
  + contrib/sixapi/source/bofeof.c
  + contrib/sixapi/source/browdb.prg
  + contrib/sixapi/source/browse.prg
  + contrib/sixapi/source/close.c
  + contrib/sixapi/source/commit.c
  + contrib/sixapi/source/copy.c
  + contrib/sixapi/source/count.c
  + contrib/sixapi/source/create.c
  + contrib/sixapi/source/dbcopy.c
  + contrib/sixapi/source/dbdelim.c
  + contrib/sixapi/source/dbedit.prg
  + contrib/sixapi/source/dbeval.c
  + contrib/sixapi/source/dbsort.c
  + contrib/sixapi/source/dbstru.c
  + contrib/sixapi/source/decrypt.c
  + contrib/sixapi/source/delete.c
  + contrib/sixapi/source/descend.c
  + contrib/sixapi/source/empty.c
  + contrib/sixapi/source/encrypt.c
  + contrib/sixapi/source/eval.c