@@ -8,6 +8,10 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2012-07-18 06:30 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
+  * contrib/sixapi/source/replace.c
+    ! SX_REPLACE(): corrected logic when replacing field with array
+
 2012-07-18 06:04 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
   * contrib/sixapi/include/sxapi.h
   * contrib/sixapi/source/sde.c
